# aeriallidar-noros

./: .gitignore  README.md  colorize_pointcloud.py  csv_to_npy.py  dataflash_converter.py  parse_alts_from_dataflash.py  parse_times.py  ply_formatter.py  point.py  pointcloud.py  pointcloud_database.py  pointcloud_transformer.py  pointcloud_transformer_parallel.py  prep.sh  profile_full.sh  run.sh  transform.py  transform_database.py
bag_converter/: bag_to_ply.py  combine_csv.py  parse_bag.sh
converters/: dataflash_converter.py  microstrain_converter.py  parse_dataflash.py  tersus_converter.py
converters/bag_converter/: parse_bag.sh
icp/: CMakeLists.txt  OctreeVoxelGridFilter.h  colorize_ply.cpp  combine_pcd.cpp  filter.cpp  icp.cpp
microstrain/: Makefile  microstrain  microstrain.cpp  microstrain_parser.py
microstrain/libmip/include/: mip_sdk_interface.h  mip_sdk_user_functions.h
microstrain/libmip/src/: mip.c  mip_sdk_inteface.c  mip_sdk_user_functions.c
parallel/: pointcloud_transformer_parallel.py
pointclouds/: .pointcloud.py.swp  pointcloud.py  pointcloud_database.py
quanergy/: Makefile  ply_from_quanergy.cpp
tools/: dataflash_converter.py  parse_times.py  ply_formatter.py  utils.py
transformer/: transform_database.py
